--- a/sass/_galeria.scss
+++ b/sass/_galeria.scss
@@ -1,4 +1,9 @@
+  /*VARIABLES*/
 
+$colorFuerte:rgb(51, 102, 153);
+$colorSuave:rgb(97, 133, 193);
+$fondoFuerte: rgb(170, 170, 170);
+$fondoSuave:rgb(228, 228, 228);
 
 /*MAIN*/
 
