--- a/sass/_rrhh.scss
+++ b/sass/_rrhh.scss
@@ -1,11 +1,16 @@
+  /*VARIABLES*/
 
+$colorFuerte:rgb(51, 102, 153);
+$colorSuave:rgb(97, 133, 193);
+$fondoFuerte: rgb(170, 170, 170);
+$fondoSuave:rgb(228, 228, 228);
 
     /*RRHH*/
 
 .tituloTrabajo{
     margin-top: 50px;
     text-align: center;
-    color: rgb(51, 102, 153);
+    color: $colorFuerte;
     font-style: normal;
     font-size: 20px;
     height: 50px;
@@ -13,7 +18,7 @@
 .leyendaTrabajo{
     font-style: normal;
     font-size: 18px;
-    color: rgb(97, 133, 193);
+    color: $colorSuave;
     font-style: oblique;
     text-align: center;
     display: block;
