--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,11 +1,16 @@
+  /*VARIABLES*/
 
+$colorFuerte:rgb(51, 102, 153);
+$colorSuave:rgb(97, 133, 193);
+$fondoFuerte: rgb(170, 170, 170);
+$fondoSuave:rgb(228, 228, 228);
 
     /*MAIN*/
 
 .tituloContacto{
     margin-top: 50px;
     text-align: center;
-    color: rgb(51, 102, 153);
+    color: $colorFuerte;
     font-style: normal;
     font-size: 20px;
     height: 50px;
@@ -57,7 +62,7 @@
 .tituloEncontranos {
     margin-top: 50px;
     text-align: center;
-    color: #336699;
+    color: $colorFuerte;
     font-style: normal;
     font-size: 20px;
     height: 50px; 
