--- a/sass/_nosotros.scss
+++ b/sass/_nosotros.scss
@@ -1,3 +1,8 @@
+    /*VARIABLES*/
+
+$colorFuerte:rgb(51, 102, 153);
+$colorSuave:rgb(97, 133, 193);
+$fondoSuave:rgb(228, 228, 228);
 
 
     /* MAIN */
@@ -12,7 +17,7 @@
 .tituloAcercade {
     margin-top: 50px;
     text-align: center;
-    color: rgb(51, 102, 153);
+    color: $colorFuerte;
     font-style: normal;
     font-size: 20px;
     height: 50px;
@@ -20,7 +25,7 @@
 .somosunaEmpresa {
     font-style: normal;
     font-size: 18px;
-    color: rgb(97, 133, 193);
+    color: $colorSuave;
     font-style: oblique;
     text-align: center;
     display: block;
@@ -45,24 +50,24 @@
 
         .misionVira{
             text-align: left;
-            color: rgb(51, 102, 153);
+            color: $colorFuerte;
             font-style: normal;
             font-size: 20px;
             height: 50px;
-            border-top: solid 5px rgb(51, 102, 153);
+            border-top: solid 5px $colorFuerte;
         }
         .proporcionarEl{
             text-align: left;
-            color: rgb(97, 133, 193);
+            color: $colorSuave;
             font-style: normal;
             font-size: 17px;
             height: 240px;
-            border-bottom: solid 5px rgb(97, 133, 193);
+            border-bottom: solid 5px $colorSuave;
         }
     }
 
     .estamosEspecialmente {
-        background-color: rgb(51, 102, 153);
+        background-color: $colorFuerte;
         color: white;
         column-count: 2;
         column-gap: 5%;
@@ -78,7 +83,7 @@
     margin-top: 100px;
     margin-bottom: 50px;
     text-align: center;
-    color: rgb(51, 102, 153);
+    color: $colorFuerte;
     font-style: normal;
     font-size: 20px;
     height: 50px;
@@ -97,20 +102,20 @@
         width: 100%;
         height: 300px;
         grid-area: ib2;
-        background-color: rgb(228, 228, 228);
+        background-color: $fondoSuave;
         overflow-y: hidden;
 
         .oficinaTecnica{
             padding-left: 55px;
             text-align: left;
-            color: rgb(51, 102, 153);
+            color: $colorFuerte;
             font-style: normal;
             font-size: 20px;
             height: 50px;
         }    
         .leyendaOficina{
             text-align: left;
-            color: rgb(97, 133, 193);
+            color: $colorSuave;
             font-style: normal;
             font-size: 20px;
             height: 250px;
@@ -140,20 +145,20 @@
         width: 100%;
         height: 400px;
         grid-area: ic2;
-        background-color: rgb(228, 228, 228);
+        background-color: $fondoSuave;
         overflow-y: hidden;
 
         .ejecucionObra{
             padding-left: 55px;
             text-align: left;
-            color: rgb(51, 102, 153);
+            color: $colorFuerte;
             font-style: normal;
             font-size: 20px;
             height: 50px;
         }
         .leyendaObra{
             text-align: left;
-            color: rgb(97, 133, 193);
+            color: $colorSuave;
             font-style: normal;
             font-size: 20px;
             height: 300px;
