--- a/sass/_media600px.scss
+++ b/sass/_media600px.scss
@@ -47,7 +47,8 @@
                 padding-left: 15px;
                 text-align: left;
                 font-size: 15px;
-                height: 20px;
+                height: 32px;
+                overflow-y: hidden;
             }
             .leyendaOficina{
                 font-size: 13px;
@@ -78,7 +79,8 @@
             .ejecucionObra{
                 padding-left: 15px;
                 font-size: 15px;
-                height: 20px;
+                height: 32px;
+                overflow-y: hidden;
             }
             .leyendaObra{
                 font-size: 13px;
