--- a/sass/_media992px.scss
+++ b/sass/_media992px.scss
@@ -40,12 +40,13 @@
                 padding-left: 15px;
                 text-align: left;
                 font-size: 15px;
-                height: 20px;
+                height: 32px;
+                overflow-y: hidden;
             }
             .leyendaOficina{
-                font-size: 13px;
-                height: 230px;
-                padding: 15px 15px 15px 15px;
+                font-size: 12px;
+                height: 215px;
+                padding: 10px 10px 10px 10px;
                 grid-area: ib2;
             }
         }
@@ -70,7 +71,8 @@
             .ejecucionObra{
                 padding-left: 15px;
                 font-size: 15px;
-                height: 20px;
+                height: 32px;
+                overflow-y: hidden;
             }
             .leyendaObra{
                 font-size: 13px;
