--- a/sass/_servicios.scss
+++ b/sass/_servicios.scss
@@ -100,6 +100,8 @@ $fondoSuave:rgb(228, 228, 228);
             height: 300px;
             padding: 30px 55px 30px 55px;
             grid-area: sa2;
+            overflow-y: hidden;
+
         }
     }
 }
