--- a/css/style.css
+++ b/css/style.css
@@ -544,8 +544,8 @@
     width: 60%;
     display: grid;
     grid-template-columns: 50% 25% 25%;
-    grid-template-rows: 30px 30px 30px 30px 50px 30px;
-    grid-template-areas: "area1 area2 area2" "area3 area2 area2" "area4 area2 area2" "area5 area2 area2" "area6 area7 area9" "area8 area8 area8"; }
+    grid-template-rows: 30px 30px 30px 30px 50px 30px 30px;
+    grid-template-areas: "area1 area2 area2" "area3 area2 area2" "area4 area2 area2" "area5 area2 area2" "area6 area7 area9" "archivos archivos archivos" "area8 area8 area8"; }
     .formCaja .formEmpleo .nombreEmpleo {
       grid-area: area1;
       border: 0.5px solid black; }
@@ -567,6 +567,8 @@
     .formCaja .formEmpleo .mensajeEmpleo {
       grid-area: area2;
       border: 0.5px solid black; }
+    .formCaja .formEmpleo .dropZone {
+      grid-area: archivos; }
     .formCaja .formEmpleo .enviarEmpleo {
       grid-area: area8;
       border: 0.5px solid black; }
