--- a/sass/_media600px.scss
+++ b/sass/_media600px.scss
@@ -149,7 +149,11 @@
         }                      
     }
     
-    /*UBICACION*/
+    /*CONTACTO*/
+
+    .form{
+        width: 80%;
+    }
 
     .cajaUbicacion{
         width: 80%;
