--- a/sass/_media992px.scss
+++ b/sass/_media992px.scss
@@ -112,7 +112,11 @@
         }
     }
 
-    /*UBICACION*/
+    /*CONTACTO*/
+
+    .form{
+        width: 70%;
+    }
 
     .cajaUbicacion{
         width: 80%;
