--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -5,55 +5,96 @@ $colorSuave:rgb(97, 133, 193);
 $fondoFuerte: rgb(170, 170, 170);
 $fondoSuave:rgb(228, 228, 228);
 
-    /*MAIN*/
-
-.tituloContacto{
-    margin-top: 50px;
-    text-align: center;
-    color: $colorFuerte;
-    font-style: normal;
-    font-size: 20px;
-    height: 50px;
-}
 
     /*FORM*/
 
-.formContacto {
-    opacity: 0.6;
-    margin: auto;
-    width: 60%;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50px 50px 50px 50px 30px;
-    grid-template-areas: "area1 area2"
-                         "area3 area2"
-                         "area4 area2"
-                         "area5 area2"
-                         "area6 area6";
-    
-    .nombre {
-    grid-area: area1;
-    border: 0.5px solid black;
+.form{
+    width:50%;
+    height:500px;
+    background:#e6e6e6;
+    border-radius: 8px;
+    box-shadow: 0 0 40px -10px #000;
+    margin: calc(50vh - 220px) auto;
+    padding: 20px 30px;
+    max-width: calc(100vw - 40px);
+    box-sizing: border-box;
+    position: relative;
+    overflow: visible;
+
+    .contacto{
+        margin:10px 0;
+        padding-bottom:10px;
+        width:180px;
+        color:$colorFuerte;
+        border-bottom:3px solid #78788c;
     }
-    .email {
-        grid-area: area3;
-        border: 0.5px solid black;
+    .casilleroContacto{
+
+        .inputContacto{
+            width:100%;
+            padding:10px;
+            box-sizing:border-box;
+            background:none;
+            outline:none;
+            resize:none;
+            border:0;
+            transition:all .3s;
+            border-bottom:2px solid #bebed2;
+        }
     }
-    .empresa {
-        grid-area: area4;
-        border: 0.5px solid black;
-   }
-   .telefono {
-        grid-area: area5;
-        border: 0.5px solid black;
+    .botonContacto{
+        float:right;
+        padding:8px 12px;
+        margin:8px 0 0;
+        font-family:'Montserrat',sans-serif;
+        border:2px solid #78788c;
+        background:0;
+        color:#5a5a6e;
+        cursor:pointer;
+        transition:all .3s;
     }
-    .mensaje {
-        grid-area: area2;
-        border: 0.5px solid black;
-    }
-    .enviar {
-        grid-area: area6;
-        border: 0.5px solid black;
+    .infoContacto{
+        content:'Hi';
+        position:absolute;
+        bottom: -15px;
+        right:-20px;
+        background:#50505a;
+        color:#fff;
+        height: 25px;
+        width:400px;
+        padding:16px 4px 16px 0;
+        border-radius:6px;
+        font-size:13px;
+        box-shadow:10px 10px 40px -14px #000;
+        display: grid;
+        grid-template-columns: 10% 35% 10% 45%;
+        grid-template-rows: 25px;
+        grid-template-areas: "iconoTelefono telefonoContacto iconoMail emailContacto";
+        align-items: center;
+
+        .iconoTelefono{
+            width: 50px;
+            height: auto;
+            grid-area: iconoTelefono;
+            text-align: center;
+        }
+        
+        .telefonoContacto{
+            grid-area: telefonoContacto;
+            text-align: center;
+        }
+        
+        .iconoMail{
+            width: 40px;
+            height: auto;
+            grid-area: iconoMail;
+            text-align: center;
+        }
+        .emailContacto{
+            grid-area: emailContacto;
+            align-content: center;
+            text-align: center;
+        }
     }
 }
 
