--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -54,6 +54,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 5px;
 
     .teAcompañamos {
         color: white;
