--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -5,6 +5,6 @@
     text-decoration: none;
     border: none;
     outline: none;
-    font-family: 'Mukta', sans-serif;
+    font-family: 'Radio Canada', sans-serif;
     overflow-x: hidden;
 }
